Release environment and return list of environment with owners
