# src/routes/environment.ts
@@ -1,7 +1,7 @@
 import express, { type Request, Response } from 'express';
 import { ZodError } from 'zod';
 
-import { findEnvByName, getEnvironments, reserve } from '../data';
+import { findEnvByName, getEnvironments, release, reserve } from '../data';
 import { isEnvironmentAvailable } from '../service';
 import { ReserveValidator } from './validators';
 
@@ -10,10 +10,29 @@ const router = express.Router();
 router.get('/', async (req: Request, res: Response) => {
   const data = await getEnvironments();
 
-  res.json({ data: data.map(({ name }) => name) });
+  res.json({
+    data: data.map((env) => ({
+      name: env.name,
+      owner: isEnvironmentAvailable(env) ? null : env.owner,
+    })),
+  });
 });
 
 router.get('/:envName', (req: Request, res: Response) => {});
+
+router.post('/release/:envName', async (req: Request, res: Response) => {
+  const envName = req.params.envName;
+  const env = await findEnvByName(envName);
+
+  if (env === undefined) {
+    res.status(404).json();
+    return;
+  }
+
+  await release(env.id);
+
+  res.status(204).json();
+});
 
 router.post('/reserve/:envName', async (req: Request, res: Response) => {
   const envName = req.params.envName;
@@ -29,7 +48,7 @@ router.post('/reserve/:envName', async (req: Request, res: Response) => {
     ReserveValidator.parse(data);
 
     if (!isEnvironmentAvailable(env)) {
-      res.status(409).json();
+      res.status(409).json({ owner: env.owner });
       return;
     }
 
